# AI-Debt

./: .gitignore  AI-Debt-Development-Plan-v1.md  AI-Debt-System-Design-v6.md  AI-Debt-System-Design-v7.md  AI_Debt_Ownership_Gap_Design.md  CONTEXT.md  README.md  README_ch.md  pyproject.toml
.codex/: hooks.json
ai_debt/: __init__.py  cli.py  companion.py  config.py  core.py  events.py  evidence.py  hooks.py  journal.py  maintenance.py  mcp_server.py  ownership.py  paths.py  profile_setup.py  review.py  schema.py  store.py
ai_debt/adapters/: __init__.py  claude_code.py  codex.py  common.py
docs/: adapter-contract.md  mcp-plan-spec.md  mcp-usage.md  mvp-usage.md  ownership-mcp-spec.md  privacy.md
tests/: test_mcp.py  test_ownership.py  test_phase1.py
