[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-debt"
version = "0.1.0"
description = "Local-first cognitive debt journal for AI-assisted build sessions."
requires-python = ">=3.10"

[project.scripts]
ai-debt = "ai_debt.cli:main"
ai-debt-mcp = "ai_debt.mcp_server:main"

[tool.setuptools.packages.find]
include = ["ai_debt*"]
